--- a/HUR/JMM_26.html
+++ b/HUR/JMM_26.html
@@ -67,6 +67,14 @@ We have 11 students making 13 presentations at the 2026 Joint Mathematics Meetin
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr valign=top>
+    <td>Jack Lao,</td><td></td>
+    <td>January 6  Poster # 21 at 12:30 PM  AMS-&Pi;ME Poster Session I, Exhibit Hall D, Convention center<br>
+      <a href="https://meetings.ams.org/math/jmm2026/meetingapp.cgi/Paper/58829">Efficient Exploration of Planar Shapes
+      Through Simple Random Walk</a></td>  
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr valign=top>
     <td>Jennifer Mackenzie,</td><td></td>
     <td>January 5 at 1:00 PM.  Talk in &Pi;ME Session, 159A, Convention center<br>
       <a href="https://meetings.ams.org/math/jmm2026/meetingapp.cgi/Paper/58382">The height function associated with a sparse collection:
@@ -86,6 +94,14 @@ We have 11 students making 13 presentations at the 2026 Joint Mathematics Meetin
     <td>Ahn Viet Nguyen, </td><td></td>
     <td>January 6   Poster #113  at 3:30 PM in AMS&ndash;&Pi;ME Poster Session II, 159A,  Exhibit Hall D, Convention center<br>
       <a href="https://meetings.ams.org/math/jmm2026/meetingapp.cgi/Paper/59018">Convergence of Permuted Products of Exponentials</a></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr valign=top>
+    <td>Ethan Park,</td><td></td>
+    <td>January 6  Poster # 21 at 12:30 PM  AMS-&Pi;ME Poster Session I, Exhibit Hall D, Convention center<br>
+      <a href="https://meetings.ams.org/math/jmm2026/meetingapp.cgi/Paper/58829">Efficient Exploration of Planar Shapes
+      Through Simple Random Walk</a></td>  
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
