--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
    <!---------------------------------------------------------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
-     <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
+     <td colspan=2>Schedule in Navigate</td> 
     </tr>
     <!-------------------------------------------------->
-     <tr valign=top><td colspan=2>TBA</td>
-      <td colspan=2 ></td>
-      <td>  </td></tr>
+     <tr valign=top><td colspan=3>Mondays 17:00 &ndash; 17:30</td>
     <!-------------------------------------------------->
-     <tr><td> TBA </td><td> </td> </tr>
+     <tr><td colspan=3>Tuedays  13:30 &ndash; 14:30 &nbsp; &amp; &nbsp; 17:30 &ndash; 18:00</td><td> </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td colspan=3>Thursdays  &nbsp; 17:30 &ndash; 18:00</td><td> </td> </tr>
     <!-------------------------------------------------->
 <!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
     <!---------------------------------------------------------------------------------------------------->
