--- a/talks.html
+++ b/talks.html
@@ -122,7 +122,7 @@
   <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Algebra seminar,
-    Michigan State Univertsity, 11 March 2026.
+    Michigan State University, 11 March 2026.
     <a href="talks/26/JMM_Kurlin.txt"></a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
@@ -130,7 +130,7 @@
   <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Mathematical Physics and Operator Algebras seminar,
-    Michigan State Univertsity, 10 March 2026.
+    Michigan State University, 10 March 2026.
     <a href="talks/26/JMM_Kurlin.txt"></a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
@@ -144,7 +144,7 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>Families of graphs satisfying the spectral edges conjecturess</I></font>,
+    <FONT COLOR="AA00FF"><I>Families of graphs satisfying the spectral edges conjecture</I></font>,
     AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
     Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
     <a href="talks/26/JMM_Spectral.txt">abstract</a>
