--- a/teaching.html
+++ b/teaching.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<table>
+<table border=0>
  <tr valign=top>
   <td>
 <!---------------------------------------------------------------->
@@ -74,12 +74,14 @@
  </tr>
  <!------------------------------------------------------->
 </table>
-  
 <!---------------------------------------------------------------->
 </td>
+<!---------------------------------------------------------------->
+<!----------           End Navigation Panel           ------------>
+<!---------------------------------------------------------------->
 <td>
 <!---------------------------------------------------------------->
-<table>
+<table border=0>
  <tr valign=top>
   <td width=140 align=center>
    <img src="images/frank_sm.jpg"><br>
@@ -87,7 +89,7 @@
   <td align=left>
    <font size=+3>Frank Sottile's Teaching</font><br><br>
 <!-------------------------------------------------------------------->
-<!------------    Teaching navigation page  -------------->
+<!-----------------    Teaching navigation page  ------------------->
 <table>
  <!------------------------------------------------>
  <tr>
@@ -120,6 +122,8 @@
  <!---------------------------------------------------------------------------->
 </table>
 <!-------------------------------------------------------------------->
+<!------------   End Teaching navigation panel  ---------------------->
+<!-------------------------------------------------------------------->
   </td>
 </tr>
 <!---------------------------------------------------------------------------->
@@ -136,35 +140,44 @@
 <!------------------------------------------------------------------------------>
  <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Winter 2026</font></b>
-   <table border=0>
+   <table>
    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 648</font>&nbsp;</td>
       <td><a href="teaching/26.1/648.html">Computational Algebraic Geometry</a></td>
-      <td colspan=1> Tu-Th </td><td> 15:55&ndash;17:10</td><td> Blocker 121
+      <td colspan=1> Tu-Th </td><td> 15:55&ndash;17:10</td><td> Blocker 121 
       </td>
     </tr>
    <!---------------------------------------------------------------------------------------------------->
+   <tr>	
+     <td><font color=brown>Office Hours:</font></td>
+      <!-------------------------------------------------->
+     <td colspan=3>Mondays 14:00 &ndash; 14:50</td> </tr>
+    <!----------------------------------------------------------------->
+     <tr><td></td><td colspan=3>Thursdays  10:00 &ndash; 11:00 </td> </tr>
+    <!-------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------->
+   </table>
   	
-   <tr><td colspan=4><hr></td></tr>
-
+   <!---------------------------------------------------------------------------------------------------->
+   <tr><td colspan=3><hr></td></tr>
+   <tr><td colspan=3><table border=0>
+   <!---------------------------------------------------------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
-     <!----
-     <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
+     <td colspan=2>Schedule in Navigate</td> 
     </tr>
-    -------------------------------------------------->
-<!--     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
-      <td colspan=2 >15:00&ndash;16:00</td>
-      <td>  </td></tr>
-    --------------------------------------------------
-     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
-    -------------------------------------------------->
-     <!-- -->
-    <tr><td>By appointment </td><td>email Sottile </td> </tr>
+    <!-------------------------------------------------->
+     <tr valign=top><td colspan=3>Mondays 17:00 &ndash; 17:30</td></tr>
+    <!-------------------------------------------------->
+     <tr><td colspan=3>Tuedays  13:30 &ndash; 14:30 &nbsp; &amp; &nbsp; 17:30 &ndash; 18:00</td><td> </td> </tr>
+    <!-------------------------------------------------->
+     <tr><td colspan=3>Thursdays  &nbsp; 17:30 &ndash; 18:00</td><td> </td> </tr>
+    <!-------------------------------------------------->
+   <!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
   <!---------------------------------------------------------------------------------------------------->
   </table>
   <!---------------------------------------------------------------------------------------------------->
-
+  </td></tr>
  <!---------------------------------------------------------------------------------------------------->
 
 
@@ -223,6 +236,6 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Sept 25 22:16:28 CDT 2025 by sottile</p>  
+<p>Last modified: Thu Jan 1 10:45:16 CST 2026 by sottile</p>  
 </body> </html>
  
