--- a/teaching/26.1/648.html
+++ b/teaching/26.1/648.html
@@ -31,6 +31,13 @@
        Graduate algebra or permission of instructor.
        This may be taken concurrently with Math 654.<br>
     
+   <font size=+1 color=maroon><b>Office Hours:</b></font>
+   Mondays  14:00 &ndash; 14:50 &nbsp; &amp; &nbsp; Thursdays  10:00 &ndash; 11:00.<br>
+    
+   <font size=+1 color=maroon><b>
+       <a href="https://tamu.simplesyllabus.com/doc/7nvrnpi38/Spring-2026-College-Station-MATH-648-600-%2858754%29-COMPUTATIONAL-ALG-GEOM?mode=view">Course Syllabus</a></b></font>
+   <a href="https://tamu.simplesyllabus.com/api2/doc-pdf/7nvrnpi38/Spring-2026-College-Station-MATH-648-600-%2858754%29-COMPUTATIONAL-ALG-GEOM.pdf?locale=en-US">PDF</a>.
+   
   </td>
   <td>
    <img src="HexWeb.gif" alt="Web for a maximally inflected quintic plane curve"> &nbsp; &nbsp;
