--- a/HUR/index.html
+++ b/HUR/index.html
@@ -15,8 +15,10 @@
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------------------------------->
+<font color=maroon><b>Resources:</b></font>
 <ul>
   <li> <a href="https://sites.google.com/tamu.edu/tamumathclub/">Texas A&amp;M Math Club</a>.  </li>
+  <li> Steve Butler's <a href="https://www.mathreuprograms.org/">database of mathematics REUs</a></li>
 </ul>
 <!---------------------------------------------------------------------------------------------------->
 <HR>
