--- a/talks.html
+++ b/talks.html
@@ -134,7 +134,15 @@
     <a href="talks/26/JMM_Kurlin.txt"></a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Mathematics and Statistics Fair,
+    Texas A&amp;M  University, 14 February 2026.
+    <a href="talks/26/JMM_Kurlin.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>Algebraic geometry of periodic graph operators</I></font>,
     AMS Special Session on  Open Problems in Geometric Data Science,
