--- a/teaching/26.1/648.html
+++ b/teaching/26.1/648.html
@@ -46,12 +46,12 @@
 </table>
 <!---------------------------------------------------------------------------->
 
-<!-----------------------------------------------
-<hr>----------------------------->
-<!-----------------------------------------------------------------
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
 I have assigned some <a href="648_HW.html">homework</a>.<br>
 
-Here are links to <a href="Scripts.html">snippets</a> of computer code used in class.----------->
+Here are links to <a href="Scripts.html">snippets</a> of computer code used in class.
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
