--- a/teaching/26.1/648_HW.html
+++ b/teaching/26.1/648_HW.html
@@ -1,15 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <HTML>
 <HEAD>
- <TITLE>Homework for Math 648: Computational Algebraic Geometry -- Winter 2019</TITLE>
+ <TITLE>Homework for Math 648: Computational Algebraic Geometry -- Winter 2026</TITLE>
  <link rel="shortcut icon" href="../../images/sottile.ico"> 
  <link href="i../../mages/frank.css" rel="stylesheet" type="text/css">
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </HEAD>
 <!---------------------------------------------------------------------------->
 <A NAME="top"></A>
-<H2>Spring 2019<BR>
-Math 648: Computational Algebraic Geometry -- Winter 2019
+<H2>Math 648: Computational Algebraic Geometry -- Winter 2019
 </H2>
 <h2><font color=blue>Homework</font>
 </H2>
@@ -17,55 +16,13 @@ Math 648: Computational Algebraic Geometry -- Winter 2019
 <!------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------->
-<b><font size=+1 color=maroon>Due Tuesday March 19</font></b><br>
-
-<ol>
-
-  <li>  Use resultants to compute the implicit equation of the parametrized curve,
-    <i>x</i> = <i>t</i><sup>3</sup>+3<i>t</i><sup>2</sup>-2
-    <i>y</i> = <i>t</i><sup>3</sup>-2<i>t</i>
+<ul>
+  <li>Due Tuesday, January 27.
+    <a href="HW/HW1.tex">LaTeX source<a>.
   </li>
 
-  <li>Problem 4, Section 2.1.  Prove the equality of the two formulas for the Discriminant in Example 2.1.5.
-       Warning: the LHS should be divided by <i>f</i><sub>0</sub>, and not multiplied by it, as it is in the current
-       version on line.</li>
-  <li>
-    Let <i>f</i> = <font color=red style="text-decoration: underline;">5<i>x</i><sup>2</sup><i>y</i></font>
-          + 7<i>xy</i><sup>2</sup> + 2  &nbsp; &nbsp; 
-    and  <i>g</i> = <font color=red style="text-decoration: underline;">13<i>x</i><sup>4</sup></font>
-            + 17<i>x</i><sup>2</sup><i>y</i><sup>2</sup> + 11<i>x</i> &nbsp;
-       be polynomials in <b>Q</b>[<i>x</i>,<i>y</i>] with the degree reverse lexicographic term order.
-    In one of the computer algebra systems, compute the Gr&ouml;bner basis of the ideal they generate,
-    implementing the steps in the Buchberger algorithm.
-    This is started in either of <a href="scripts/7Feb.m2"><tt>7Feb.m2</tt></a> or
-    <a href="scripts/7Feb.sing"><tt>7Feb.sing</tt></a>.
-     It is your choice which one to use.
-  </li>
-  <li>Problem 3, Section 2.3.  This gives an elementary iprovement to Buchberger's Algorithm.   </li>
-  <li>From Section 2.4, do problems 2, 5, and 8.
-    The Singular script <a href="scripts/sparse.sing"><tt>sparse.sing</tt></a> (that I ran in class) may help,
-    as may  <a href="scripts/sparse_3.sing"><tt>sparse_3.sing</tt></a>.<br>
-    Here are Macaulay2 versions, due to Thomas Yahl: <a href="scripts/sparse.m2"><tt>sparse.m2</tt></a> and
-    <a href="scripts/sparse_3.m2"><tt>sparse_3.m2</tt></a>.
-  </li>
-
-</ol>
-    
-<!------------------------------------------------------------------------->
-<hr>
-<!------------------------------------------------------------------------->
-<b><font size=+1 color=maroon>Due Thursday 14 February</font></b><br>
-This is from the Chapters in the book I am writing, and which I am partially following.
-The different problems in this set rhyme.
-
- <ol>
-   <li> Section 1.2,   Numbers 3 and 10.
-   <li> Section 1.3,   Number 5.
-   <li> Section 2.2,   Numbers 2 and 6.
-
-  </li>
-
-</ol>
+  
+</ul>
 <!------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------->
@@ -73,6 +30,6 @@ The different problems in this set rhyme.
 <!---------------------------------------------------------------------------->
 <address></address>
 <i><font color="AA00AA">
-<!-- hhmts start -->Last modified: Tue Mar 12 17:56:02 CDT 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sat Jan 17 10:27:26 CST 2026 <!-- hhmts end -->
 </i></font>
 </body> </html>
