--- a/conferences.html
+++ b/conferences.html
@@ -154,35 +154,19 @@
    Durham, England, 6 &ndash; 10 July 2026.
  </li>
  <!---------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://sites.google.com/view/combinatexas-2026/home">CombinaTexas</a>,
+   25  &ndash; 26 April 2026.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ 
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="conferences/TAGS26/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    17  &ndash; 19 April 2026.<br>
    Supported by NSF grant DMS-2349244.
- </li>
- <!---------------------------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------------------------->
- <li> AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
-      Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
-     Buenos Aires, Argentina, December 15 &ndash; 17 2025.
-  </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://icerm.brown.edu/program/semester_program_workshop/tw-25-wagtc">Webs in Algebra, Geometry, Topology and Combinatorics</a>,
-   ICERM, Providence, RI, 8 &ndash; 12 December 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://icerm.brown.edu/program/semester_program_workshop/sp-f25-w3">Computation in Representation Theory</a>,
-   ICERM, Providence, RI, 10 &ndash; 14 November 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
 </UL>
