udated JMM page

--- a/HUR/JMM_26.html
+++ b/HUR/JMM_26.html
@@ -7,10 +7,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </HEAD>
 <!---------------------------------------------------------------------------------------------------->
-<h2><font color=maroon>TAMU tudents at the 2026 Joint Mathematics Meetings in Washington, DC</font></h2>
+<h2><font color=maroon>TAMU Students at the 2026 Joint Mathematics Meetings in Washington, DC</font></h2>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
+<img src="images/26_JMM.jpg"><br><br>
+TAMU students at the 2026 Joint Mathematics Meetings.
+<!---------------------------------------------------------------------------------------------------->
+<hr>
 <!---------------------------------------------------------------------------------------------------->
 
-We have 13 students making 14 presentations at the 2026 Joint Mathematics Meetings in Washington, DC.
+There were 13 students making 14 presentations at the 2026 Joint Mathematics Meetings in Washington, DC.
 
 <br>
 <FONT SIZE=+1 color=maroon><b>TAMU Presenters:</b>  </font><br>
