--- a/HUR/JMM_26.html
+++ b/HUR/JMM_26.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <HTML>
 <HEAD>
-   <TITLE>TAMU tudents at the 2026 Joint Mathematics Meetings in Washington, DC</Title>
+   <TITLE>TAMU Students at the 2026 Joint Mathematics Meetings in Washington, DC</Title>
 <link rel="shortcut icon" href="../images/sottile.ico"> 
 <link href="../images/frank.css" rel="stylesheet" type="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -187,6 +187,6 @@ There were 13 students making 14 presentations at the 2026 Joint Mathematics Mee
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Fri Dec 26 14:28:26 CST 2025 by sottile</p>  
+<p>Last modified: Sun Jan 18 9:21:36 CST 2026 by sottile</p>  
 </BODY>
 </HTML>
