--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
    </tr> -->
    </tr>
       <tr> <td>&nbsp;</td>
-     <td><a href="https://calendar.google.com/calendar/u/0/embed?src=c_086b4d5be2e592c7ee26dc818975ae39bef8b677f4f1fa6077bdc213b57073fc@group.calendar.google.com&ctz=America/Chicago">MPHA</a>
+     <td><a href="https://sites.google.com/view/mpha-seminar/home">MPHA</a>
      </td>
      <td width=30></td>
      <td>Fridays 1:50&ndash;2:50&nbsp;&nbsp;</td>
