--- a/talks.html
+++ b/talks.html
@@ -121,6 +121,14 @@
   <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Colloquium,
+    Western University, 12 March 2026.
+    <a href="talks/23/SAGA.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Algebra seminar,
     Michigan State University, 11 March 2026.
     <a href="talks/26/JMM_Kurlin.txt"></a>
@@ -137,9 +145,41 @@
   <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    ACMS/Math Colloquium,
+    University of Notre Dame, 5 March 2026.
+    <a href="talks/23/SAGA.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Mathematics and Statistics Fair,
     Texas A&amp;M  University, 14 February 2026.
     <a href="talks/26/JMM_Kurlin.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>Some algebraic geometry in applications</I></font>,
+    Undergraduate Colloquium,
+    Bringham Young University, 3 February 2026.
+    <a href="talks/23/SAGA.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Algebraic Geometry Seminar,
+    Bringham Young University, 2 February 2026.
+    <a href="talks/26/.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>Monodromy in the Osculating Schubert Calculus</I></font>,
+    Geometry Seminar,
+    Texas A&amp;M  University, 23 January 2026.
+    <a href="talks/26/MitOSC.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
