--- a/teaching/26.1/Scripts.html
+++ b/teaching/26.1/Scripts.html
@@ -4,49 +4,20 @@
 </head>
 
 <body>
-<h1>Math 648 Computational ALgebraic Goemetry:  Scripts</h1>
+<h1>Math 648 Computational Algebraic Goemetry:  Scripts</h1>
 
 
 <!---------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------->
 
-<font color=red>Thursday 7 March:</font>  
-I ran a Singular script: <a href="scripts/Derksen.sing"><tt>Derksen.sing</tt></a> in class today, studying solutions to a
-problem in linear algebra.
-<!--Macaulay2 script <a href="scripts/7Feb.m2"><tt>7Feb.m2</tt></a>, which starts a
-Groebner basis calculation "by hand".
-It has an identical -->.
 
-
-<!---------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------->
-
-<font color=red>Tuesday 5 March:</font>  
-I ran a Singular script: <a href="scripts/5March.sing"><tt>5March.sing</tt></a> in class today, studying solutions to a
-certain sparse polynomial system using elimination.
-<!--Macaulay2 script <a href="scripts/7Feb.m2"><tt>7Feb.m2</tt></a>, which starts a
-Groebner basis calculation "by hand".
-It has an identical -->.
-
-<!---------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------->
-
-<font color=red>Thursday 7 February:</font>  
-I ran a Macaulay2 script <a href="scripts/7Feb.m2"><tt>7Feb.m2</tt></a>, which starts a
-Groebner basis calculation "by hand".
-It has an identical Singular script: <a href="scripts/7Feb.sing"><tt>7Feb.sing</tt></a>.
-
-
-<!---------------------------------------------------------------------------->
-<hr>
-<!---------------------------------------------------------------------------->
-
-<font color=red>Tuesday 29 January:</font>  
-In class, I ran the Macaulay2 script <a href="scripts/small_big.m2"><tt>small_big.m2</tt></a>.
-It has an identical Singular script: <a href="scripts/small_big.sing"><tt>small_big.sing</tt></a>.
+<font color=red>Tuesday 20 January:</font>  
+In class, I ran the Macaulay2 script <a href="scripts/27lines.m2"><tt>27lines.m2</tt></a>.
+It has a nearly identical Singular script: <a href="scripts/27lines.sing"><tt>27lines.sing</tt></a><br>
+The difference is that the Singular file computes an elminant.
+I also have one for the 2875 lines on a quintic three-fold:
+ <a href="scripts/2875lines.sing"><tt>2875lines.sing</tt></a>
 
 
 
@@ -54,5 +25,5 @@ It has an identical Singular script: <a href="scripts/small_big.sing"><tt>small_
 <hr>
 <!---------------------------------------------------------------------------->
 <address></address>
-<!-- hhmts start -->Last modified: Thu Mar  7 20:52:56 CST 2019 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Tu Jan 20 17:49:52 CST 2026 <!-- hhmts end -->
 </body> </html>
