--- a/conferences/TAGS26/index.html
+++ b/conferences/TAGS26/index.html
@@ -79,22 +79,22 @@
 <!------------------------------------------------------------------------------------------------------------------------>
 
 <!----------------------------------------------------------------------------------------------------->
-<!--<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform">Registration:</a></b>
+<b><a href="https://docs.google.com/forms/d/e/1FAIpQLScb_pb9-je7IjQWb0EbHdZ6AZPf-Gl5KKjplAv-4UvTjiIxlg/viewform">Registration:</a></b>
   We have limited support for travel and hotels during the meeting.
-  Please register by <font color=red></font>February 28 to ensure full consideration for funding.<br>-->
+  Please register by <font color=red>March 17</font> to ensure full consideration for funding.<br>
 
-<!--<b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
-     with a prize for the best poster by a student or postdoc.<br> -->
+<b><a href="posters.html"></a>Poster Session:  </b> We expect to have a poster session for participants,
+     with a prize for the best poster by a student or postdoc.<br> <!---->
 
-<b>Funding:</b> Conference attendance is supported by NSF grant DMS-2349244.
+<b>Funding:</b>Conference attendance is supported by NSF grant DMS-2349244.
 We will have some support available to cover travel expenses and accommodation for graduate students and
-early-career participants. Request this with your registration. <br>
+early-career participants. Request this with your regisration. <br>
 
 <a href="local.html"><b>Local and Practical Information</b></a>  <!--<font color=red>(Under Construction)</font>-->   <br>
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
-<!---  <b>Conference Program</b>    IMPORT frm TAGS25 -->
+<!---  <b>Conference Program</b>    IMPORT from TAGS25 -->
 
 <!---------------------------------------------------------------------------------------------------->
 <!--  <hr>  -->
