--- a/conferences/TAGS26/local.html
+++ b/conferences/TAGS26/local.html
@@ -27,10 +27,10 @@
   <tr valign=top>
     <td><b><font color=Maroon>Hotel: </font></b></td>
     <td>The Mathematics Department will book and pay (through our NSF grant) for hotel rooms for elligible participants
-      at a nearby hotel.
-      <!--<a href="https://www.hilton.com/en/hotels/clltehx-hampton-college-station/">The Hampton Inn</a>, a 20-minute walk from the Blocker
-        Building.-->
-        You must register for the meeting and be elligible for funding (Student or faculty at a US-based Institution) for
+      at <!--a nearby hotel.-->
+      <a href="https://www.hilton.com/en/hotels/clltehx-hampton-college-station/">The Hampton Inn</a>, a 20-minute walk from the Blocker
+        Building.
+        You must register for the meeting and be eligible for funding (student or faculty at a US-based Institution) for
       the grant to be able to  pay for your hotel.<br>
         Speakers will stay at a different hotel.</td>
   </tr>
@@ -49,7 +49,8 @@
     <td><b><font color=Maroon>Snacks and meals:</font></b></td>
     <td>The Mathematics Department and College of Liberal Arts and Sciences will provide a break room with refreshments and snacks for the
       participants.
-      There will also be a dinner provided to participants on Friday between 6:30 PM and 7:30 PM, and a conference dinner on Saturday.
+      There will also be a dinner provided to participants on Friday <!-- between 6:30 PM and 7:30 PM,-->
+      dinner provided on site on Saturday.
     </td>
   </tr>
   <!-------------
@@ -79,7 +80,7 @@
       Another option is to fly into Houston (IAH or HOU) or Austin (AUS).  There is a regular shuttle service from IAH
       (<a href="https://groundshuttle.com/">Ground Shuttle</a>&mdash;which must be reserved in advance),
       and the only option for Austin is to hire a car.
-      If you choose to drive from these other airports, we hope that you can car pool with someone.</td>
+      If you choose to drive from these other airports, we expect that you can car pool with someone.</td>
   </tr>
   <!-------------------------------------------------->
   <tr valign=top>
