--- a/talks.html
+++ b/talks.html
@@ -121,6 +121,26 @@
   <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Keynote Speaker (virtual),
+    International Symposium on Current Trends in Mathematical Sciences,
+    Gombe State UNiversity, Nigeria, April 2026.
+    <a href="talks/23/SAGA.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The critical point degree of a periodic graph</I></font>,
+    Special Session on Applied and Computational Algebraic Geometry at
+    <a href="https://www.ams.org/meetings/sectional/2329_program.html">AMS Spring Southeastern Sectional Meeting</a>
+    Georgia Southern University, Savannah, GA
+    March 28&ndash;29, 2026.
+        <a href="talks/25/CPD.txt">abstract</a>
+    <a href="talks/26/Savannah.pdf"></a><!--text of talk-->
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
     Colloquium,
     Western University, 12 March 2026.
     <a href="talks/23/SAGA.txt"></a>
@@ -152,7 +172,7 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     Mathematics and Statistics Fair,
     Texas A&amp;M  University, 14 February 2026.
     <a href="talks/26/JMM_Kurlin.txt"></a>
@@ -168,16 +188,16 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Monodromy in the Osculating Schubert Calculus</I></font>,
     Algebraic Geometry Seminar,
     Bringham Young University, 2 February 2026.
-    <a href="talks/26/.txt"></a>
+    <a href="talks/26/MitOSC.txt"></a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>Monodromy in the Osculating Schubert Calculus</I></font>,
-    Geometry Seminar,
+    <a href="https://tamu-seminar.github.io/geometry/">Geometry Seminar</a>,
     Texas A&amp;M  University, 23 January 2026.
     <a href="talks/26/MitOSC.txt">abstract</a>
   </li>
