--- a/conferences/TAGS26/index.html
+++ b/conferences/TAGS26/index.html
@@ -88,11 +88,18 @@
 
 <b>Funding:</b>Conference attendance is supported by NSF grant DMS-2349244.
 We will have some support available to cover travel expenses and accommodation for graduate students and
-early-career participants. Request this with your regisration. <br>
+early-career participants. Request this with your registration. <br>
 
 <a href="local.html"><b>Local and Practical Information</b></a>  <!--<font color=red>(Under Construction)</font>-->   <br>
 <!----------------------------------------------------------------------------------------------------->
 <hr>
+The conference is expected to begin with a catered dinner (on site in Blocker Building) on Friday in the early evening,
+followed by a talk by Justin Lacini.
+
+We'll have four talks on Saturday, followed by a poster session, reception and another catered dinner in Blocker.
+
+There will be two talks on Sunday, and we will finish before noon.
+
 <!----------------------------------------------------------------------------------------------------->
 <!---  <b>Conference Program</b>    IMPORT from TAGS25 -->
 
