--- a/teaching/26.1/Scripts.html
+++ b/teaching/26.1/Scripts.html
@@ -12,9 +12,19 @@
 <!---------------------------------------------------------------------------->
 
 
+<font color=red>Thursday 29 January:</font>  
+In class, I ran the Macaulay2 script <a href="scripts/small_big.m2"><tt>small_big.m2</tt></a>.
+Here is a nearly identical Singular script: <a href="scripts/small_big.sing"><tt>small_big.sing</tt></a><br>
+It is instructive to run both of them.
+
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
+
+
 <font color=red>Tuesday 20 January:</font>  
 In class, I ran the Macaulay2 script <a href="scripts/27lines.m2"><tt>27lines.m2</tt></a>.
-It has a nearly identical Singular script: <a href="scripts/27lines.sing"><tt>27lines.sing</tt></a><br>
+Here is a nearly identical Singular script: <a href="scripts/27lines.sing"><tt>27lines.sing</tt></a><br>
 The difference is that the Singular file computes an elminant.
 I also have one for the 2875 lines on a quintic three-fold:
  <a href="scripts/2875lines.sing"><tt>2875lines.sing</tt></a>
@@ -25,5 +35,5 @@ I also have one for the 2875 lines on a quintic three-fold:
 <hr>
 <!---------------------------------------------------------------------------->
 <address></address>
-<!-- hhmts start -->Last modified: Tu Jan 20 17:49:52 CST 2026 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Th Jan 29 15:21:37 CST 2026 <!-- hhmts end -->
 </body> </html>
