added some homework

--- a/teaching/26.1/648_HW.html
+++ b/teaching/26.1/648_HW.html
@@ -17,7 +17,11 @@
 <hr>
 <!------------------------------------------------------------------------->
 <ul>
-  <li>Due Tuesday, January 27.
+  <li>Due Tuesday, February 17.
+    <a href="HW/HW2.tex">LaTeX source<a>.
+  </li>
+
+    <li>Due Tuesday, January 27.
     <a href="HW/HW1.tex">LaTeX source<a>.
   </li>
 
